--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
     <link rel=stylesheet type="text/css" href="../css/index.css">
     <div id="menu">
             <ul>
-              <li><td>6</td>
-                <td>0x4
+              <li>
+                <tr>
+                <td><span class="sprite inv-sprite" style="background-image:url(/media/4/44/InvSprite.png?version=9915ee98a108dd70b413e5301ebc5a97);background-position:-896px -1504px"><br /></span>
+                </td>
+                <td>6</td>
+                <td>0x6
                 </td>
                 <td>◆個人資料紀錄、成就與網頁◆
                 </td>
-                <td><code>#B1A627</code></td>
-                <td><code>#F8C627</code>
+                <td><code>#DB7D3E</code></td>
+                <td><code>#F07613</code>
                 </td></tr>
-                <tr>
-                <td><span class="sprite inv-sprite" style="background-image:url(/media/4/44/InvSprite.png?version=9915ee98a108dd70b413e5301ebc5a97);background-position:-832px -1504px"><br /></span></li>
-              <li> <a href="#">Vegetables</a></li>
+                <li> <a href="#">Vegetables</a></li>
               <li> <a href="#Meats">Meats</a></li>
               <li> <a href="#">Fruits</a></li>
               <li> <a href="#">Vegetables</a></li>
