--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <div id="menu">
             <ul>
               <li>
+                <table class="wikitable" style="text-align:center" data-description="Data values">
+                <tbody>
                 <tr>
                 <td><span class="sprite inv-sprite" style="background-image:url(/media/4/44/InvSprite.png?version=9915ee98a108dd70b413e5301ebc5a97);background-position:-896px -1504px"><br /></span>
                 </td>
@@ -13,7 +15,7 @@
                 </td>
                 <td><code>#DB7D3E</code></td>
                 <td><code>#F07613</code>
-                </td></tr>
+                </td></tr></tbody></table>
                 <li> <a href="#">Vegetables</a></li>
               <li> <a href="#Meats">Meats</a></li>
               <li> <a href="#">Fruits</a></li>
