--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <div id="menu">
             <ul>
               <li>
-                <td style="background-image:url(/media/4/44/InvSprite.png?version=9915ee98a108dd70b413e5301ebc5a97);background-position:-896px -1504px">◆個人資料紀錄、成就與網頁◆
+                <td style="background-image:url(https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/4/44/InvSprite.png?version=9915ee98a108dd70b413e5301ebc5a97media/4/44/InvSprite.png?version=9915ee98a108dd70b413e5301ebc5a97);background-position:-896px -1504px">◆個人資料紀錄、成就與網頁◆
                 </td>
                 <li> <a href="#">Vegetables</a></li>
               <li> <a href="#Meats">Meats</a></li>
