--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <link rel=stylesheet type="text/css" href="../css/index.css">
+    <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/index.css">
     <div id="menu">
             <ul>
               <li> <a id ="ywool" href="#">◆個人資料紀錄、成就與網頁◆</a></li>
@@ -11,5 +11,4 @@
               <li> <a href="#">Vegetables</a></li>
               <li> <a href="#">Vegetables</a></li>
             </ul>
-          </div>
 </html>
