--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<html>
+<html>◆個人資料紀錄、成就與網頁◆
     <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/index.css">
     <div id="menu">
             <ul>
-              <li> <a id ="ywool" href="#">◆個人資料紀錄、成就與網頁◆</a></li>
+              <li> <a id ="ywool" href="#"></a></li>
               <li> <a href="#Meats">Meats</a></li>
               <li> <a href="#">Fruits</a></li>
               <li> <a href="#">Vegetables</a></li>
