--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/index.css">
     <div id="menu">
             <ul>
-              <li><a id ="ywool" href="#"></a></li>
+              <li><a id ="ywool" href="#">.</a></li>
               <li> <a href="#Meats">Meats</a></li>
               <li> <a href="#">Fruits</a></li>
               <li> <a href="#">Vegetables</a></li>
