--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <html>
-    <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/index.css">
-    <div id="menu">
-            <ul>
-              <li><a id ="ywool" href="#">.</a></li>
-              <span class="invslot"><span class="invslot-item" data-minetip-title="黄色羊毛"><span class="sprite inv-sprite" style="background-image:url(/media/4/44/InvSprite.png?version=9915ee98a108dd70b413e5301ebc5a97);background-position:-32px -1536px"><br></span></span></span>
-              <li> <a href="#Meats">Meats</a></li>
-              <li> <a href="#">Fruits</a></li>
-              <li> <a href="#">Vegetables</a></li>
-              <li> <a href="#Meats">Meats</a></li>
-              <li> <a href="#">Fruits</a></li>
-              <li> <a href="#">Vegetables</a></li>
-              <li> <a href="#">Vegetables</a></li>
-            </ul>
+    <head>
+     <meta http-equiv="refresh" content="0;url=/">
+     <link rel="canonical" href="https://patyhank.github.io/McFalloutCommandsGuide/page1.html">
+    </head>
 </html>
+     
