--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
     <head>
-     <meta http-equiv="refresh" content="0;url=https://patyhank.github.io/McFalloutCommandsGuide/page1.html">
-     <link rel="canonical" href="https://patyhank.github.io/McFalloutCommandsGuide/page1.html">
+        <meta http-equiv="refresh" content="0; url=https://patyhank.github.io/McFalloutCommandsGuide/page1.html"/>
     </head>
 </html>
      
