--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url=https://patyhank.github.io/McFalloutCommandsGuide/page1.html"/>
+        <a href="https://patyhank.github.io/McFalloutCommandsGuide/page1.html">點擊跳轉至小幫手WEB</a>
     </head>
 </html>
      
