--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-     <meta http-equiv="refresh" content="0;url=/">
-     <link rel="canonical" href="/">
+     <meta http-equiv="refresh" content="0;url=https://patyhank.github.io/McFalloutCommandsGuide/">
+     <link rel="canonical" href="https://patyhank.github.io/McFalloutCommandsGuide/">
     </head>
 </html>
      
