--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="https://patyhank.github.io/McFalloutCommandsGuide">點擊跳轉</a>
+<a href="https://patyhank.github.io/McFalloutCommandsGuide/page1.html">點擊跳轉</a>
