--- a/page1.html
+++ b/page1.html
@@ -1,6 +1,6 @@
 <html>
 <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/index.css">
-
+<link rel="stylesheet" type="text/css" media="screen" href="https://patyhank.github.io/McFalloutCommandsGuide/css/minecraft-webfont.css" />
 <body id="chest">
   <div>
     <p id="chesttext">
