--- a/page1.html
+++ b/page1.html
@@ -4,8 +4,11 @@
 <body id="chest">
   <div>
     <p id="chesttext">
-      ◆個人服務相關◆
+      [+] 個人服務相關 [+]
     </p>
+  </div>
+  <div class="invslot">
+    <p class="sprite">◆個人服務相關◆</p>
   </div>
 </body>
 
