--- a/page1.html
+++ b/page1.html
@@ -8,7 +8,7 @@
     </p>
   </div>
   <div class="invslot">
-    <p class="sprite">◆個人服務相關◆</p>
+    <p class="sprite-text">◆個人服務相關◆</p>
   </div>
 </body>
 
