--- a/page1.html
+++ b/page1.html
@@ -1,4 +1,5 @@
 <html>
+<script src="https://patyhank.github.io/McFalloutCommandsGuide/js/index.js"></script>
 <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/index.css">
 <link rel="stylesheet" type="text/css" media="screen" href="https://patyhank.github.io/McFalloutCommandsGuide/css/minecraft-webfont.css" />
 <body id="chest">
@@ -11,5 +12,4 @@
     <p class="sprite-text" title="◆個人服務相關◆" style="background-image:url(https://minecraft-zh.gamepedia.com/media/4/44/InvSprite.png?version=d2e85d7a9f07c31a30bc852cfbaf78e7);background-position:-0px -1536px">◆個人服務相關◆</p>
   </div>
 </body>
-
 </html>
