--- a/page1.html
+++ b/page1.html
@@ -8,7 +8,7 @@
       [+] 個人服務相關 [+]
     </p>
   </div>
-  <div class="invslot" style="position: absolute; top:101px; left:42px; background-image: url('https://minecraft-zh.gamepedia.com/media/4/44/InvSprite.png?version=d2e85d7a9f07c31a30bc852cfbaf78e7');background-position: -768px -1504px z-index=1">
+  <div class="invslot" style="position: absolute; top:101px; left:42px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
     <p class="sprite-text" title="◆個人服務相關◆">◆個人服務相關◆</p>
   </div>
 </body>
