--- a/page1.html
+++ b/page1.html
@@ -4,12 +4,12 @@
 <link rel="stylesheet" type="text/css" media="screen" href="https://patyhank.github.io/McFalloutCommandsGuide/css/minecraft-webfont.css" />
 <body id="chest">
   <div>
-    <p id="chesttext">
-      [+] 個人服務相關 [+]
+    <p id="chesttext" calss="mc-dark-gray">
+      [+] 個人服務相關 [+]  ↓點羊毛可切選單↓
     </p>
   </div>
   <div class="invslot" style="position: absolute; top:101px; left:42px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
-    <p class="sprite-text mc-dark-gray" title="◆個人服務相關◆" >◆個人服務相關◆ ↓點羊毛可切選單↓</p>
+    <p class="sprite-text" title="◆個人服務相關◆" >◆個人服務相關◆</p>
   </div>
 </body>
 </html>
