--- a/page1.html
+++ b/page1.html
@@ -4,7 +4,7 @@
 <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/minecraft-webfont.css">
 <body id="chest">
   <div>
-    <p id="chesttext" calss="mc-dark-gray" style="font-family: Minecraft;">
+    <p id="chesttext" class="mc-dark-gray">
       [+] 個人服務相關 [+]  ↓點羊毛可切選單↓
     </p>
   </div>
