--- a/page1.html
+++ b/page1.html
@@ -33,7 +33,7 @@
     <p href="https://patyhank.github.io/McFalloutCommandsGuide/page9.html" class="sprite-text">◆贊助相關◆</p>
   </div>
   <div class="invslot" style="position: absolute; top:101px; left:880px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
-    <p href="https://patyhank.github.io/McFalloutCommandsGuide/page3.html" class="sprite-text">◆快速廣播小幫手與解答◆</p>
+    <p class="sprite-text">◆快速廣播小幫手與解答◆</p>
 </div>>
 </body>
 </html>
