--- a/page1.html
+++ b/page1.html
@@ -35,5 +35,8 @@
   <a class="invslot" style="position: absolute; top:101px; left:880px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
     <p class="sprite-text">◆快速廣播小幫手與解答◆</p>
   </a>
+  <a class="invslot" style="position: absolute; top:205px; left:880px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
+    <p class="sprite-text">   </p>
+  </a>
 </body>
 </html>
