update page1.html and some image

--- a/page1.html
+++ b/page1.html
@@ -8,32 +8,32 @@
       [+] 個人服務相關 [+]  ↓點羊毛可切選單↓
     </p>
 </a>
-  <a class="invslot" style="position: absolute; top:101px; left:42px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
+  <a class="invslot" style="position: absolute; top:101px; left:42px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png/');">
     <p class="sprite-text">◆個人服務相關◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page2.html" class="invslot" style="position: absolute; top:101px; left:145px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/4/44/InvSprite.png?version=d2e85d7a9f07c31a30bc852cfbaf78e7'); background-position:-896px -1504px;">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page2.html" class="invslot" style="position: absolute; top:101px; left:145px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png/');">
     <p class="sprite-text">◆領地功能相關◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page4.html" class="invslot" style="position: absolute; top:101px; left:250px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page4.html" class="invslot" style="position: absolute; top:101px; left:250px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png/');">
     <p class="sprite-text">◆交易兌換物品相關◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page5.html" class="invslot" style="position: absolute; top:101px; left:355px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page5.html" class="invslot" style="position: absolute; top:101px; left:355px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png/');">
     <p class="sprite-text">◆玩家互動相關◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page6.html" class="invslot" style="position: absolute; top:101px; left:460px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
-    <p class="sprite-text">◆領地功能相關◆</p>
-  </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page7.html" class="invslot" style="position: absolute; top:101px; left:565px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page7.html" class="invslot" style="position: absolute; top:101px; left:565px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png/');">
     <p class="sprite-text">◆伺服器特殊設定◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page8.html" class="invslot" style="position: absolute; top:101px; left:670px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page8.html" class="invslot" style="position: absolute; top:101px; left:670px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png/');">
     <p class="sprite-text">◆個人資料記錄、成就與網頁◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page9.html" class="invslot" style="position: absolute; top:101px; left:775px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page9.html" class="invslot" style="position: absolute; top:101px; left:775px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png/');">
     <p class="sprite-text">◆贊助相關◆</p>
   </a>
-  <a class="invslot" style="position: absolute; top:101px; left:880px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
+  <a class="invslot" style="position: absolute; top:101px; left:880px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
     <p class="sprite-text">◆快速廣播小幫手與解答◆</p>
+  </a>
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page6.html" class="invslot" style="position: absolute; top:101px; left:460px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Structure_Void.png');">
+    <p class="sprite-text">◆關閉小幫手◆</p>
   </a>
   <a class="invslot" style="position: absolute; top:205px; left:880px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
     <p class="sprite-text">   </p>
