--- a/page1.html
+++ b/page1.html
@@ -20,7 +20,7 @@
   <a href="https://patyhank.github.io/McFalloutCommandsGuide/page5.html" class="invslot" style="position: absolute; top:101px; left:355px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
     <p class="sprite-text">◆玩家互動相關◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page7.html" class="invslot" style="position: absolute; top:101px; left:460pxpx; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page7.html" class="invslot" style="position: absolute; top:101px; left:460px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
     <p class="sprite-text">◆伺服器特殊設定◆</p>
   </a>
   <a href="https://patyhank.github.io/McFalloutCommandsGuide/page8.html" class="invslot" style="position: absolute; top:101px; left:565px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
@@ -32,7 +32,7 @@
   <a class="invslot" style="position: absolute; top:101px; left:775px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
     <p class="sprite-text">◆快速廣播小幫手與解答◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page6.html" class="invslot" style="position: absolute; top:101px; left:880; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Structure_Void.png');">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page6.html" class="invslot" style="position: absolute; top:101px; left:880px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Structure_Void.png');">
     <p class="sprite-text">◆關閉小幫手◆</p>
   </a>
   <a class="invslot" style="position: absolute; top:205px; left:880px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
