--- a/page1.html
+++ b/page1.html
@@ -35,7 +35,7 @@
   <a href="https://patyhank.github.io/McFalloutCommandsGuide/page6.html" class="invslot" style="position: absolute; top:101px; left:880px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Structure_Void.png');">
     <p class="sprite-text">◆關閉小幫手◆</p>
   </a>
-  <a class="invslot" style="position: absolute; top:205px; left:880px; background-image: url('https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/thumb/b/b7/Light_Blue_Wool.png/150px-Light_Blue_Wool.png?version=aa9a02d78cb300d770126b8607bb46c2');">
+  <a class="invslot" style="position: absolute; top:205px; left:880px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
     <p class="sprite-text">   </p>
   </a>
 </body>
