--- a/page1.html
+++ b/page1.html
@@ -8,7 +8,7 @@
       [+] 個人服務相關 [+]  ↓點羊毛可切選單↓
     </p>
 </a>
-  <a class="invslot" style="position: absolute; top:101px; left:42px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png/');">
+  <a class="invslot" style="position: absolute; top:101px; left:42px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
     <p class="sprite-text">◆個人服務相關◆</p>
   </a>
   <a href="https://patyhank.github.io/McFalloutCommandsGuide/page2.html" class="invslot" style="position: absolute; top:101px; left:145px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
