--- a/page1.html
+++ b/page1.html
@@ -35,6 +35,27 @@
   <a href="https://patyhank.github.io/McFalloutCommandsGuide/page6.html" class="invslot" style="position: absolute; top:101px; left:880px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Structure_Void.png');">
     <p class="sprite-text">◆關閉小幫手◆</p>
   </a>
+  <a class="invslot" style="position: absolute; top:205px; left:145px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text">   </p>
+  </a>
+  <a class="invslot" style="position: absolute; top:205px; left:250px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text">   </p>
+  </a>
+  <a class="invslot" style="position: absolute; top:205px; left:355px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text">   </p>
+  </a>
+  <a class="invslot" style="position: absolute; top:205px; left:460px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text">   </p>
+  </a>
+  <a class="invslot" style="position: absolute; top:205px; left:565px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text">   </p>
+  </a>
+  <a class="invslot" style="position: absolute; top:205px; left:670px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text">   </p>
+  </a>
+  <a class="invslot" style="position: absolute; top:205px; left:775px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text">   </p>
+  </a>
   <a class="invslot" style="position: absolute; top:205px; left:880px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
     <p class="sprite-text">   </p>
   </a>
