--- a/page1.html
+++ b/page1.html
@@ -30,7 +30,11 @@
     <p class="sprite-text">◆贊助相關◆</p>
   </a>
   <a class="invslot" style="position: absolute; top:101px; left:775px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
-    <p class="sprite-text">◆快速廣播小幫手與解答◆</p>
+    <div class="sprite-text">
+      <p>◆快速廣播小幫手與解答◆</p>
+      <p>使用</p><p class="mc-ampc">滑鼠中鍵</p><br>
+      <p>點擊小幫手內物品 可以</p><p class="mc-ampa">快速廣播</p>
+    </div>
   </a>
   <a href="https://patyhank.github.io/McFalloutCommandsGuide/page6.html" class="invslot" style="position: absolute; top:101px; left:880px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Structure_Void.png');">
     <p class="sprite-text">◆關閉小幫手◆</p>
