--- a/page1.html
+++ b/page1.html
@@ -30,7 +30,7 @@
     <p class="sprite-text">◆贊助相關◆</p>
   </a>
   <a class="invslot" style="position: absolute; top:101px; left:775px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
-    <div class="sprite-text">
+    <div class="sprite-text" style="height: max-content">
       <p>◆快速廣播小幫手與解答◆</p>
       <p>使用</p><p class="mc-ampc">滑鼠中鍵</p><br>
       <p>點擊小幫手內物品 可以</p><p class="mc-ampa">快速廣播</p>
