--- a/page1.html
+++ b/page1.html
@@ -36,7 +36,7 @@
       <p>點擊小幫手內物品 可以</p><p class="mc-ampa">快速廣播</p>
     </div>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page6.html" class="invslot" style="position: absolute; top:101px; left:880px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Structure_Void.png');">
+  <a href="javascript:window.opener=null;window.close();" class="invslot" style="position: absolute; top:101px; left:880px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Structure_Void.png');">
     <p class="sprite-text">◆關閉小幫手◆</p>
   </a>
   <a class="invslot" style="position: absolute; top:205px; left:44px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
