--- a/page1.html
+++ b/page1.html
@@ -35,6 +35,7 @@
       <p>◆快速廣播小幫手與解答◆</p>
       <p>使用</p><p class="mc-ampc">滑鼠中鍵</p><br>
       <p>點擊小幫手內物品 可以</p><p class="mc-ampa">快速廣播</p>
+      <p>回答新手問題</p><p class="mc-amp8">(</p><p class="mc-ampb">會廣播到所有分流</p><p class="mc-amp8">)</p>
     </div>
   </a>
   
