--- a/page1.html
+++ b/page1.html
@@ -32,10 +32,10 @@
   </a>
   <a class="invslot" style="position: absolute; top:101px; left:775px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Clock.png');">
     <div class="sprite-text" style="height: auto">
-      <p class="p">◆快速廣播小幫手與解答◆</p>
-      <p class="p">使用</p><p class="mc-ampc p">滑鼠中鍵</p><br>
-      <p class="p">點擊小幫手內物品 可以</p><p class="mc-ampa p">快速廣播</p>
-      <p class="p">回答新手問題</p><p class="mc-amp8 p">(</p><p class="mc-ampb p">會廣播到所有分流</p><p class="mc-amp8 p">)</p>
+      <p>◆快速廣播小幫手與解答◆</p>
+      <p>使用</p><p class="mc-ampc">滑鼠中鍵</p><br>
+      <p>點擊小幫手內物品 可以</p><p class="mc-ampa">快速廣播</p>
+      <p>回答新手問題</p><p class="mc-amp8">(</p><p class="mc-ampb">會廣播到所有分流</p><p class="mc-amp8">)</p>
     </div>
   </a>
   
