--- a/page1.html
+++ b/page1.html
@@ -33,10 +33,10 @@
   <a class="invslot" style="position: absolute; top:101px; left:775px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Clock.png');display:inline;">
     <div class="sprite-text" style="height: auto">
       <div style="white-space:nowrap;">
-      <p>◆快速廣播小幫手與解答◆</p>
-      <p>使用</p><p class="mc-ampc">滑鼠中鍵</p>
-      <p>點擊小幫手內物品 可以</p><p class="mc-ampa">快速廣播</p>
-      <p>回答新手問題</p><p class="mc-amp8">(</p><p class="mc-ampb">會廣播到所有分流</p><p class="mc-amp8">)</p>
+      <a>◆快速廣播小幫手與解答◆</a>
+      <a>使用</a><a class="mc-ampc">滑鼠中鍵</a>
+      <a>點擊小幫手內物品 可以</a><a class="mc-ampa">快速廣播</a>
+      <a>回答新手問題</a><a class="mc-amp8">(</a><a class="mc-ampb">會廣播到所有分流</a><a class="mc-amp8">)</a>
     </div>
     </div>
   </a>
