--- a/page1.html
+++ b/page1.html
@@ -32,7 +32,7 @@
   </a>
   <a class="invslot" style="position: absolute; top:101px; left:775px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Clock.png');display:inline;">
     <div class="sprite-text" style="height: auto">
-      <div style="white-space:nowrap!important;"></div>
+      <div class="nobr"></div>
       <p>◆快速廣播小幫手與解答◆</p>
       <p>使用</p><p class="mc-ampc">滑鼠中鍵</p>
       <p>點擊小幫手內物品 可以</p><p class="mc-ampa">快速廣播</p>
