--- a/page1.html
+++ b/page1.html
@@ -1,7 +1,11 @@
 <html>
-<script src="https://patyhank.github.io/McFalloutCommandsGuide/js/index.js"></script>
-<link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/index.css">
-<link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/minecraft-webfont.css">
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta name="keywords" content="廢土網頁選單">
+        <script src="https://patyhank.github.io/McFalloutCommandsGuide/js/index.js"></script>
+        <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/index.css">
+        <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/minecraft-webfont.css">
+      </head>
 <body id="chest">
 
   <a>
