--- a/page1.html
+++ b/page1.html
@@ -2,9 +2,11 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta name="keywords" content="廢土網頁選單">
+        <meta name="author" content="patyhank 蒟蒻" scheme="Author" />
         <script src="https://patyhank.github.io/McFalloutCommandsGuide/js/index.js"></script>
         <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/index.css">
         <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/minecraft-webfont.css">
+        
       </head>
 <body id="chest">
 
