--- a/page1.html
+++ b/page1.html
@@ -6,7 +6,14 @@
         <script src="https://patyhank.github.io/McFalloutCommandsGuide/js/index.js"></script>
         <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/index.css">
         <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/minecraft-webfont.css">
-        
+        <style type="text/css">
+          .nobr p {
+            display: inline-block;
+          }
+          .nobr .br{
+            display: block;
+          }
+          </style>
       </head>
 <body id="chest">
 
