--- a/page1.html
+++ b/page1.html
@@ -1,88 +1,116 @@
 <html>
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <meta name="keywords" content="廢土網頁選單">
-        <meta name="author" content="patyhank 蒟蒻" scheme="Author" />
-        <script src="https://patyhank.github.io/McFalloutCommandsGuide/js/index.js"></script>
-        <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/index.css">
-        <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/minecraft-webfont.css">
-        <style type="text/css">
-          .nobr p {
-            display: inline-block;
-          }
-          .nobr .br{
-            display: block;
-          }
-          </style>
-      </head>
+
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta name="keywords" content="廢土網頁選單">
+  <meta name="author" content="patyhank 蒟蒻" scheme="Author" />
+  <script src="https://patyhank.github.io/McFalloutCommandsGuide/js/index.js"></script>
+  <link rel=stylesheet type="text/css" href="https://patyhank.github.io/McFalloutCommandsGuide/css/index.css">
+  <link rel=stylesheet type="text/css"
+    href="https://patyhank.github.io/McFalloutCommandsGuide/css/minecraft-webfont.css">
+  <style type="text/css">
+    .nobr p {
+      display: inline-block;
+    }
+
+    .nobr .br {
+      display: block;
+    }
+  </style>
+</head>
+
 <body id="chest">
 
   <a>
     <p id="chesttext" class="mc-dark-gray">
-      [+] 個人服務相關 [+]  ↓點羊毛可切選單↓
+      [+] 個人服務相關 [+] ↓點羊毛可切選單↓
     </p>
-</a>
-  <a class="invslot" style="position: absolute; top:101px; left:42px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
+  </a>
+  <a class="invslot"
+    style="position: absolute; top:101px; left:42px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
     <p class="sprite-text">◆個人服務相關◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page2.html" class="invslot" style="position: absolute; top:101px; left:145px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page2.html" class="invslot"
+    style="position: absolute; top:101px; left:145px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
     <p class="sprite-text">◆領地功能相關◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page4.html" class="invslot" style="position: absolute; top:101px; left:250px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page4.html" class="invslot"
+    style="position: absolute; top:101px; left:250px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
     <p class="sprite-text">◆交易兌換物品相關◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page5.html" class="invslot" style="position: absolute; top:101px; left:355px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page5.html" class="invslot"
+    style="position: absolute; top:101px; left:355px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
     <p class="sprite-text">◆玩家互動相關◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page7.html" class="invslot" style="position: absolute; top:101px; left:460px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page7.html" class="invslot"
+    style="position: absolute; top:101px; left:460px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
     <p class="sprite-text">◆伺服器特殊設定◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page8.html" class="invslot" style="position: absolute; top:101px; left:565px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page8.html" class="invslot"
+    style="position: absolute; top:101px; left:565px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
     <p class="sprite-text">◆個人資料記錄、成就與網頁◆</p>
   </a>
-  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page9.html" class="invslot" style="position: absolute; top:101px; left:670px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
+  <a href="https://patyhank.github.io/McFalloutCommandsGuide/page9.html" class="invslot"
+    style="position: absolute; top:101px; left:670px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Light_Blue_Wool.png');">
     <p class="sprite-text">◆贊助相關◆</p>
   </a>
-  <a class="invslot" style="position: absolute; top:101px; left:775px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Clock.png');display:inline;">
-		<div class="sprite-text" style="height: auto">
-			<div class="nobr">
-				<p class="br">◆快速廣播小幫手與解答◆</p>
-				<p class="br">使用</p><p class="mc-ampc">滑鼠中鍵</p>
-				<p class="br">點擊小幫手內物品 可以</p><p class="mc-ampa">快速廣播</p>
-				<p class="br">回答新手問題</p><p class="mc-amp8">(</p><p class="mc-ampb">會廣播到所有分流</p><p class="mc-amp8">)</p>
-			</div>
-		</div>
+  <a class="invslot"
+    style="position: absolute; top:101px; left:775px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Clock.png');display:inline;">
+    <div class="sprite-text" style="height: auto">
+      <div class="nobr">
+        <p class="br">◆快速廣播小幫手與解答◆</p>
+        <p>使用 </p>
+        <p class="mc-ampc"> 滑鼠中鍵</p>
+        <p class="br">點擊小幫手內物品 可以</p>
+        <p class="mc-ampa">快速廣播</p>
+        <p>回答新手問題</p>
+        <p class="mc-amp8">(</p>
+        <p class="mc-ampb">會廣播到所有分流</p>
+        <p class="mc-amp8">)</p>
+      </div>
+    </div>
   </a>
-  
-  <a href="" class="invslot" style="position: absolute; top:101px; left:880px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Structure_Void.png');">
+
+  <a href="" class="invslot"
+    style="position: absolute; top:101px; left:880px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/Structure_Void.png');">
     <p class="sprite-text">◆關閉小幫手◆</p>
   </a>
-  <a class="invslot" style="position: absolute; top:205px; left:44px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
-    <p class="sprite-text">   </p>
+  <a class="invslot"
+    style="position: absolute; top:205px; left:44px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text"> </p>
   </a>
-  <a class="invslot" style="position: absolute; top:205px; left:145px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
-    <p class="sprite-text">   </p>
+  <a class="invslot"
+    style="position: absolute; top:205px; left:145px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text"> </p>
   </a>
-  <a class="invslot" style="position: absolute; top:205px; left:250px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
-    <p class="sprite-text">   </p>
+  <a class="invslot"
+    style="position: absolute; top:205px; left:250px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text"> </p>
   </a>
-  <a class="invslot" style="position: absolute; top:205px; left:355px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
-    <p class="sprite-text">   </p>
+  <a class="invslot"
+    style="position: absolute; top:205px; left:355px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text"> </p>
   </a>
-  <a class="invslot" style="position: absolute; top:205px; left:460px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
-    <p class="sprite-text">   </p>
+  <a class="invslot"
+    style="position: absolute; top:205px; left:460px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text"> </p>
   </a>
-  <a class="invslot" style="position: absolute; top:205px; left:565px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
-    <p class="sprite-text">   </p>
+  <a class="invslot"
+    style="position: absolute; top:205px; left:565px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text"> </p>
   </a>
-  <a class="invslot" style="position: absolute; top:205px; left:670px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
-    <p class="sprite-text">   </p>
+  <a class="invslot"
+    style="position: absolute; top:205px; left:670px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text"> </p>
   </a>
-  <a class="invslot" style="position: absolute; top:205px; left:775px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
-    <p class="sprite-text">   </p>
+  <a class="invslot"
+    style="position: absolute; top:205px; left:775px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text"> </p>
   </a>
-  <a class="invslot" style="position: absolute; top:205px; left:880px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
-    <p class="sprite-text">   </p>
+  <a class="invslot"
+    style="position: absolute; top:205px; left:880px; background-image: url('https://patyhank.github.io/McFalloutCommandsGuide/images/black_stained_glass_pane.png');">
+    <p class="sprite-text"> </p>
   </a>
 </body>
+
 </html>
